IST 652 Scripting/Week 3/ASYNC/NBA-Attendance-Results.txt
Last login: Fri Jan 21 14:50:27 on ttys000
(base) georgesmith@Georges-MBP ~ % cd gsmith19@g.syr.edu\ -\ Google\ Drive 
(base) georgesmith@Georges-MBP gsmith19@g.syr.edu - Google Drive % cd My\ Drive
(base) georgesmith@Georges-MBP My Drive % cd IST\ 652\ Scripting 
(base) georgesmith@Georges-MBP IST 652 Scripting % cd week\ 3
(base) georgesmith@Georges-MBP week 3 % cd ASYNC 
(base) georgesmith@Georges-MBP ASYNC % import os
zsh: command not found: import
(base) georgesmith@Georges-MBP ASYNC % nba file = open('NBA-Attendance-1989')
zsh: unknown file attribute: B
(base) georgesmith@Georges-MBP ASYNC % python
Python 3.9.7 (default, Sep 16 2021, 08:50:36) 
[Clang 10.0.0 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import os 
>>> os.getcwd()
'/Volumes/GoogleDrive-102750422132039360088/My Drive/IST 652 Scripting/week 3/ASYNC'
>>> nba file = open('NBA-Attendance-1989.txt', 'r')
  File "<stdin>", line 1
    nba file = open('NBA-Attendance-1989.txt', 'r')
        ^
SyntaxError: invalid syntax
>>> nbafile=open('NBA-Attendance-1989.txt', 'r')
>>> nbalist=[]
>>> for line in nbafile:
... textline= line.strip()
  File "<stdin>", line 2
    textline= line.strip()
    ^
IndentationError: expected an indented block
>>>     textline=line.strip()
  File "<stdin>", line 1
    textline=line.strip()
IndentationError: unexpected indent
>>> for line in nbafile:
...     textline=line.strip()
...     items=texline.split
...     items=texline.split()
...     nbalist.append(items)
... 
Traceback (most recent call last):
  File "<stdin>", line 3, in <module>
NameError: name 'texline' is not defined
>>> len(nbalist)
0
>>> for line in nba file:
  File "<stdin>", line 1
    for line in nba file:
                    ^
SyntaxError: invalid syntax
>>> for line in nbafile
  File "<stdin>", line 1
    for line in nbafile
                       ^
SyntaxError: invalid syntax
>>> for line in nbafile:
...     textline=line.strip()
...     items=textline.split()
...     nbalist.append(items)
... 
>>> len(nbalist)
26
>>> atttend=[]
>>> for line in nbalist()
  File "<stdin>", line 1
    for line in nbalist()
                         ^
SyntaxError: invalid syntax
>>> for line in nba list:
  File "<stdin>", line 1
    for line in nba list:
                    ^
SyntaxError: invalid syntax
>>> for line in nbalist:
...     attend.append(int(line[1]))
... 
Traceback (most recent call last):
  File "<stdin>", line 2, in <module>
NameError: name 'attend' is not defined
>>> attend=[]
>>> for line in nbalist:
...     attend.append(int(line[1]))
... 
>>> attend
[14916, 23901, 18404, 16969, 16868, 12668, 21454, 15025, 15846, 12885, 11869, 17378, 15008, 16088, 26160, 12160, 17815, 15606, 14017, 14114, 12884, 17014, 14722, 12244, 12616, 11565]
>>> sum(attend)
410196
>>> avg_att = sum(attend)/len(attend)
>>> avg_att
15776.76923076923
>>> team,att,price=nbalist[0]
>>> prices = []
>>> for (team,att,price) in nbalist:
...     prices.append(float(price))
... 
>>> prices
[22.54, 17.0, 21.98, 19.63, 17.05, 17.4, 24.42, 17.04, 17.56, 13.77, 21.95, 29.18, 17.6, 14.08, 10.92, 13.31, 22.7, 20.47, 19.04, 16.59, 22.19, 16.96, 16.79, 18.11, 18.41, 14.55]
>>> max_att = max(att)
>>> max_att
'6'
>>> avg_price=sum(price)/len(price)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'
>>> avg_prive=sum(price)/len(price)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'
>>> avg_price = sum(price)/len(price)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'
>>> avg_prices=sum(prices)/len(prices)
>>> avg_prices
18.509230769230772
>>> max_prices=max(prices)
>>> max_prices
29.18
>>> total_attendance=sum(attend)/len(attend),team
>>> total_attendance
(15776.76923076923, 'Washington')
>>> max_price=max(prices),name
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'name' is not defined
>>> max_price=max(prices),team
>>> max_price
(29.18, 'Washington')
>>> 
